--- a/project6.html
+++ b/project6.html
@@ -15,10 +15,6 @@
 	
 	<h2>A place I would like to visit</h2>
 	
-	<style>
-		p {color: green;
-			font-family: tahoma;}
-	</style>
 	
 		<p>If I could visit anywhere in the world it would be Greece. I'd visit Greece because they have many interesting places I'd like to
 		visit. I really admire the culture there. I'd love to visit Greek their temples for the gods.</p>
@@ -27,6 +23,8 @@
 			<a href="https://en.wikipedia.org/wiki/Greece">Greece</a>
 			
 	<!--Greece link--!>
+
+<h2> A person I admire <br> (past or present) </h2>
 	
 		<p>A person I admire deeply in my life is my grandma. I admire her because she's a strong hardworking woman. She does a lot in her life
 		and never manages to give up no matter what challenge hits her in life.</p>
