--- a/project6.html
+++ b/project6.html
@@ -3,7 +3,9 @@
 <html>
 
 <head>
-	<title>My First Web Page</title>
+	<title>My First CSS</title>
+	
+	<link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
