--- a/project6.html
+++ b/project6.html
@@ -5,32 +5,21 @@
 <head>
 	<title>My First CSS</title>
 	
-	<link rel="stylesheet" href="style.css"
+	<link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
-	<style>
-h1 {text-align: center;
-	color: red;}
-	</style>
-
-	<h1>Hello World!</h1>
+	        
+<h1>Hello World!</h1>
 	
 	<hr>
-	<style>
-		h2 {text-align: center;}
 	
-		u {text-decoration: underline;}
-	</style>
 	
-	<h2>A place I would like to visit</h2>
+<h2>A place I would like to visit</h2>
 	
-	<style>
-		p {color: green;
-			font-family: tahoma;}
-	</style>
+
 	
-		<p>If I could visit anywhere in the world it would be Greece. I'd visit Greece because they have many interesting places I'd like to
+<p>If I could visit anywhere in the world it would be Greece. I'd visit Greece because they have many interesting places I'd like to
 		visit. I really admire the culture there. I'd love to visit Greek their temples for the gods.</p>
 		
 		<p> </p>
@@ -38,20 +27,11 @@ h1 {text-align: center;
 			
 	<!--Greece link--!>
 	
-	<style>
-		h2 {text-align: center;}
+<h2>A person I admire <br> (past or present)</h2>
 	
-		u {text-decoration: underline;}
-	</style>
-		
-	<h2>A person I admire <br> (past or present)</h2>
+
 	
-	<style>
-		p {color: green;
-			font-family: tahoma;}
-	</style>
-	
-		<p>A person I admire deeply in my life is my grandma. I admire her because she's a strong hardworking woman. She does a lot in her life
+<p>A person I admire deeply in my life is my grandma. I admire her because she's a strong hardworking woman. She does a lot in her life
 		and never manages to give up no matter what challenge hits her in life.</p>
 		
 		<p> </p>
